finished problem sets

--- a/problem-a/css/style.css
+++ b/problem-a/css/style.css
@@ -1,4 +1,76 @@
+html {
+  height: 100%;
+}
+
 body {
   font-family: "Lato", "Helvetica Neue", "Helvetica", sans-serif;
   margin: 0;
+  height: inherit;
+  display: flex;
+  flex-direction: column;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+.container {
+  display: flex;
+  height: 100%;
+}
+
+.container section {
+  padding: 1em;
+}
+
+.col1 {
+  flex-basis: 240px;
+}
+
+.col2 {
+  flex: 1;
+  background-color: #eee;
+}
+
+.col3 {
+  flex-basis: 180px;
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+
+/* container of cards*/
+.cards {
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+}
+
+/*card items*/
+.card {
+  flex: 0 0 250px;
+  background-color: white;
+  margin: .5rem;
+  border-radius: 10px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.16), 0 1px 3px rgba(0, 0, 0, 0.23);
+
+}
+
+.card p {
+  padding: .5rem 1rem;
+}
+
+.card img {
+  border-radius: 10px 10px 0 0;
+}
+
+.flex-container {
+  flex-direction: column;
+  display: flex;
+}
+
+.flex-item {
+  flex: 1;
+}
+
+
+
